--- a/index.html
+++ b/index.html
@@ -40,6 +40,20 @@
                 <label for="volunteerName">Volunteer Name:</label>
                 <input type="text" id="volunteerName" name="volunteerName" required>
 
+        <!-- Table for displaying volunteer log -->
+        <table id="hoursTable">
+        <thead>
+        <tr>
+            <th>Charity Name</th>
+            <th>Hours Volunteered</th>
+            <th>Date</th>
+            <th>Experience Rating</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+    </table>
+
         
                 <label for="charityName">Charity Name:</label>
                 <input type="text" id="charityName" name="charityName" required>
